Border radius and stretch fixed

--- a/Styles/index.css
+++ b/Styles/index.css
@@ -1,5 +1,6 @@
 .box {
   border: solid;
+  border-radius: 5px;
   width: 150px;
   height: 150px;
   margin: 20px;
@@ -9,26 +10,22 @@
 
 .box-center {
   border: solid;
-  height: 400px;
+  border-radius: 5px;
   margin: 20px;
   text-align: center;
   background-color: brown;
   width: 100%;
-  
 }
 
-
-
-.container
- {
+.container {
   border: solid;
   display: flex;
   align-items: flex-end;
   margin-left: 20px;
   width: 100%;
+  height: 500px;
   background-color: rgb(142, 124, 211);
 }
-
 
 .container-center {
   justify-content: center;
@@ -36,11 +33,11 @@
   display: flex;
   margin-left: 20px;
   width: 100%;
+  height: 500px;
   background-color: rgb(142, 124, 211);
 }
 
-
-.container-third{
+.container-third {
   border: solid;
   display: flex;
   margin-left: 20px;
@@ -50,56 +47,61 @@
   align-items: center;
 }
 
-.container-fourth,
-
-.container-sixth{
+.container-fourth {
   border: solid;
   display: flex;
   justify-content: space-between;
   margin-left: 20px;
   width: 100%;
-  height: 400px;
+  height: 500px;
   background-color: rgb(142, 124, 211);
-  
 }
 
-.container-fifth{
+.container-fifth {
+  justify-content: center;
   border: solid;
   display: flex;
-  justify-content: space-around;
-  align-items: center;
   margin-left: 20px;
   width: 100%;
-  height: 400px;
+  height: 500px;
   background-color: rgb(142, 124, 211);
 
+}
+
+.container-sixth {
+  border: solid;
+  display: flex;
+  justify-content: space-between;
+  margin-left: 20px;
+  width: 100%;
+  height: 500px;
+  background-color: rgb(142, 124, 211);
+  align-items: center;
 }
 
 .box-1,
 .box-2,
-.box-3 {  
+.box-3 {
   border: solid;
-  width: 150px;
-  height: 150px;
+  border-radius: 5px;
+  width: 100%;
   margin: 20px;
   text-align: center;
   background-color: rgb(6, 65, 65);
-  align-items: stretch;
   margin: 20px;
-  
 }
 
-
-.box-1,
-.box-3{
-  height: 300px;
+.box-2{
+  align-self: center;
+  width: 100%;
+  height: 150px;
 }
-
 
 .first,
 .second,
 .third {
   border: solid;
+  border-radius: 5px;
   width: 150px;
   height: 150px;
   margin: 20px;
@@ -107,33 +109,39 @@
   background-color: rgb(6, 65, 65);
 }
 
-.third{
+.third {
   align-self: flex-end;
 }
 
+.left,
+.middle,
+.right {
+  border: solid;
+  border-radius: 5px;
+  width: 150px;
+  height: 150px;
+  margin: 20px;
+  text-align: center;
+  background-color: rgb(152, 185, 185);
+}
+.middle {
+  flex-grow: 2;
+}
 
-
-
-
-.first-container{
+.first-container {
   display: flex;
-  
 }
 .second-container,
 .second-row-container,
-.third-row-container{
+.third-row-container {
   display: flex;
-margin-top: 10px;
-
+  margin-top: 10px;
 }
 
-
-
-.box--secondrow{
- background-color: red;
-
+.box--secondrow {
+  background-color: red;
 }
 
-.box--right-secondrow{
-background-color: blue;
+.box--right-secondrow {
+  background-color: blue;
 }
